# Py16Web

./: .gitignore
m16_02_01/app_poetry_2609/: app.py  pyproject.toml
m16_02_01/web16_development/: call.py  log01.py  log02.py  log03.py  log4.py  log5.py  main.py  my_logger.py  pyproject.toml  type_example.py
m16_02_02/m16_poetry_app/: Dockerfile  app.py  pyproject.toml
m16_03_02/: 01_process_as_function.py  02_process__as_class.py  03_process_join.py  04_process_lock_value_array.py  05_process_event.py  06_event_stop.py  07_event_restart.py  08_condition.py  09_semaphore_manager.py  10_barrier.py  11_callback.py  12_pool.py  13_pool_imap.py  14_pool_map.py  15_pipe.py  16_pipe_duplex.py  17_work_file.py  18_work_file_test.py  19_queue.py  20_queue_join.py  pyproject.toml
m16_03_02/file/: main.py  main_crazy.py  main_pool.py
m16_03_02/task_runner/: main.js  main.py
m16_03_02/task_runner/files/: fabric-waterfall.js
m16_05_01/: 01_intro.py  02_gather.py  03_create_task.py  04_forever.py  05_future_task.py  06_bounds.py  07_process_executor.py  08_get_http.py  pyproject.toml  timing.py
m16_05_02/: 01_async_for.py  02_async_for.py  03_async_for.py  04_queue.py  05_wait.py  06_client.py  07_client.py  pyproject.toml
m16_05_02/chat/: index.html  main.css  main.js  server.py
m16_05_02/file/: main.py
m16_05_02/task_runner/: main.js  main.py
m16_05_02/task_runner/files/: image-promise.js  waterfall.js
m16_06_02/: connect.py  create-tables.sql  create.py  hw6-select.sql  insert.py  main.py  migration.py  pyproject.toml  select.py  update.py
m16_07_01/: orm_async_session.py  orm_core.py  orm_session.py  orm_session_new_api.py  pyproject.toml
m16_07_02/: config.ini  main.py  pyproject.toml
m16_07_02/conf/: db.py  models.py
m16_07_02/hw/: models.py
m16_07_02/migrations/: env.py
m16_07_02/migrations/versions/: 8d1e65e97586_init.py  a708bb82de39_add_not_null.py  f84458600a8e_add_table_contact.py
m16_07_02/seeds/: add_contacts.py  init.py
m16_08_01/: app.py  app_odm.py  main.py  main_odm.py  names.json  pyproject.toml
m16_09_01/: kacapy.json  main.py  pyproject.toml
m16_09_01/infowar/: links.json  losses.json  scrapy.cfg
m16_09_01/infowar/infowar/: items.py  middlewares.py  pipelines.py  settings.py
m16_09_01/infowar/infowar/spiders/: get_losses.py  get_urls.py
m16_09_02/: authors.json  main.py  plwr_test.py  pyproject.toml  quotes.json  selenium_spider.py  test_deep.py  test_scrapyscript.py
m16_10_01/: pyproject.toml
m16_10_01/app_instagram/: db.sqlite3
m16_10_01/app_instagram/app_instagram/: asgi.py  settings.py  urls.py
m16_10_01/app_instagram/app_photo/: forms.py  models.py  urls.py  views.py
m16_10_01/app_instagram/app_photo/migrations/: 0001_initial.py
m16_10_02/: .dockerignore  Dockerfile  fly.toml  pyproject.toml
m16_10_02/app_instagram/: db.sqlite3  manage.py
m16_10_02/app_instagram/app_auth/: apps.py  forms.py  urls.py  views.py
m16_10_02/app_instagram/app_instagram/: settings.py  urls.py  wsgi.py
m16_10_02/app_instagram/app_photo/: apps.py  models.py  urls.py  views.py
m16_10_02/app_instagram/app_photo/migrations/: 0002_picture_user_alter_picture_path.py
m16_11_01/: db.py  main.py  middlewares.py  models.py  pyproject.toml  schemas.py  sql_app.sqlite
m16_11_02/: main.py  pyproject.toml
m16_11_02/front-end/: index.html
m16_11_02/migrations/: env.py
m16_11_02/src/entity/: models.py
m16_11_02/src/repository/: todos.py
m16_11_02/src/routes/: todos.py
m16_11_02/src/schemas/: todo.py
m16_12_02/: main.py  pyproject.toml
m16_12_02/migrations/versions/: e03332145522_init.py
m16_12_02/src/conf/: config.py
m16_12_02/src/database/: db.py  fu_db.py
m16_12_02/src/entity/: models.py
m16_12_02/src/repository/: users.py
m16_12_02/src/routes/: auth.py  todos.py
m16_12_02/src/schemas/: todo.py  user.py
m16_12_02/src/services/: auth.py  roles.py
m16_14_01/: .coverage  docker-compose.yml  main.py  pyproject.toml  test.db
m16_14_01/docs/: conf.py  index.rst
m16_14_01/docs/_build/doctrees/: environment.pickle  index.doctree
m16_14_01/docs/_build/html/: .buildinfo  genindex.html  (+5 more)
m16_14_01/examples_tests/tests/: test_answer.py  test_class.py  test_method.py  test_ops.py  test_recipe.py  test_save.py
m16_14_01/migrations/versions/: de77979c6ae6_add_verify_for_user.py
m16_14_01/postgres-data/: postmaster.pid
m16_14_01/postgres-data/global/: 1260  pg_control
m16_14_01/postgres-data/pg_stat/: pgstat.stat
m16_14_01/src/conf/: config.py  messages.py
m16_14_01/src/database/: db.py
m16_14_01/src/repository/: todos.py  users.py
m16_14_01/src/routes/: auth.py  users.py
m16_14_01/src/schemas/: todo.py  user.py
m16_14_01/src/templates/: index.html
m16_14_01/tests/: conftest.py  test_e2e_auth.py  test_e2e_todos.py  test_e2e_users.py  test_unit_repository_todo.py
m16_add_01/: find.py  main.py  pyproject.toml  readme.md
m16_add_02/: bubble_sort.py  insertion_sort.py  merge_sort.py  pyproject.toml  quicksort.py  radix_sort.py  readme.md  recursion_01.py  recursion_02.py  recursion_03.py  recursion_04.py  selection_sort.py  shell_sort.py
m16_add_04/: bfs_dfs.py  bfs_iter.py  bfs_recursive.py  dfs_iter.py  dfs_recursive.py  dijkstra.py  dijkstra_nx.py  dj_view.py  main.py  ntw.py  pyproject.toml  readme.md  visual.py
m16_add_05/: avl-tree.py  binary_tree.py  main.py  pyproject.toml  readme.md  show_tree.py
m16_add_08/: dice.py  main.py  monte_carlo.py  pyproject.toml  quad.py  quad_montecarlo.py  rabine.py  readme.md  un_hash.py  view.py
m16_add_django/: pyproject.toml
m16_add_django/todoapp/: config.ini  db.sqlite3  manage.py
m16_add_django/todoapp/infoboard/: apps.py  tasks.py  urls.py  views.py
m16_add_django/todoapp/todo/: forms.py  models.py  urls.py  views.py
m16_add_django/todoapp/todoapp/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
m16_fast-api-users/: main.py  pyproject.toml  test.db
m16_hw_07/: config.ini  main.py  pyproject.toml
m16_hw_07/conf/: models.py
m16_hw_07/migrations/: env.py
m16_hw_07/migrations/versions/: d0554c578304_init.py
(+272 files in other folders)
