[tool.poetry]
name = "m16-05-02"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]
readme = "README.md"
packages = [{include = "m16_05_02"}]

[tool.poetry.dependencies]
python = "^3.10"
faker = "^19.11.0"
requests = "^2.31.0"
aiohttp = "^3.8.6"
httpx = "^0.25.0"
aioshutil = "^1.3"
aiopath = "0.6.11"
websockets = "^11.0.3"
names = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
