[tool.poetry]
name = "m16-07-01"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]
readme = "README.md"
packages = [{include = "m16_07_01"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.22"
aiosqlite = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
