[tool.poetry]
name = "m16-07-02"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]
readme = "README.md"
packages = [{include = "m16_07_02"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.23"
faker = "^19.13.0"
psycopg2 = "^2.9.9"
alembic = "^1.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
